# FlexRigLib

./: CMakeLists.txt  README.md  conanfile.py
shaders/: CreateShaderDepository.py  kernel_testRegression.cl  kernel_testTransform.cl  source_TriangleTransform.cl  source_matrix.cl  source_regression3.cl  source_structures.cl
source/executable/: CMakeLists.txt  exe_main.cpp
